--- a/tsneMDBD/README.Rmd
+++ b/tsneMDBD/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 ## Installation
 To install the package from the github repository, use:
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 if(!require(devtools)) install.packages("devtools") # If not already installed
 devtools::install_github("zhexuandliu/SNE-Accountability-MapContinuity/tsneMDBD")
 ```
