--- a/README.Rmd
+++ b/README.Rmd
@@ -1,13 +1,25 @@
+---
+output:
+  github_document:
+    html_preview: false
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, echo = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "README-"
+)
+```
+
 
 # Map discontinuity based diagnosis for t-SNE
 
 ## Installation
-
 To install the package from the github repository, use:
-
-``` r
+```{r, message=FALSE, warning=FALSE}
 if(!require(devtools)) install.packages("devtools") # If not already installed
 devtools::install_github("zhexuandliu/NE-Reliability-MapContinuity/neMDBD")
 devtools::install_github("zhexuandliu/NE-Reliability-MapContinuity/RtsneWithP")
@@ -15,7 +27,7 @@ devtools::install_github("zhexuandliu/NE-Reliability-MapContinuity/RtsneWithP")
 
 ## Usage
 
-``` r
+```{r, message=FALSE, warning=FALSE, fig.path="tools/"}
 ### load package and calculate embedding
 
 # Load package
@@ -38,38 +50,26 @@ tsne_out = RtsneWithP::Rtsne(X, perplexity = perplexity, theta = 0,
 ggplot() +
   geom_point(data = data.frame(x = X[, 1], y = X[, 2], label = label),aes(x = x, y = y, color = label)) + 
   ggtitle('Original data with labels')
-```
-
-![](tools/unnamed-chunk-3-1.png)<!-- -->
-
-``` r
 
 ggplot() + 
   geom_point(data = data.frame(tSNE1 = tsne_out$Y[, 1], tSNE2 = tsne_out$Y[, 2], label = label),aes(x = tSNE1, y = tSNE2, color = label)) + 
   ggtitle('Embedding with labels')
 ```
 
-![](tools/unnamed-chunk-3-2.png)<!-- -->
-
 ### Perturbation score
 
-``` r
+```{r}
 ### calculate perturbation score for all points
 # approx = 0 for exact perturbation score, approx = 1 or 2 for acceleration
 pscore = perturbation_score_compute(X, tsne_out$Y, perplexity, length = 0.5, approx = 0)
 ```
 
-``` r
+```{r example4, fig.path="tools/"}
 ggplot() +
   geom_point(data = data.frame(tSNE1 = tsne_out$Y[, 1], tSNE2 = tsne_out$Y[, 2], score = pscore),
              aes(x = tSNE1, y = tSNE2, color = score)) +
   viridis::scale_color_viridis(direction = 1, name = "Perturbation\nScore") + 
   ggtitle('Embedding with perturbation score')
-```
-
-![](tools/example4-1.png)<!-- -->
-
-``` r
 
 ggplot() +
   geom_point(data = data.frame(x = X[, 1], y = X[, 2], score = pscore),
@@ -78,26 +78,19 @@ ggplot() +
   ggtitle('Original data with perturbation score')
 ```
 
-![](tools/example4-2.png)<!-- -->
-
-``` r
+```{r}
 ### pre-screening of points on the peripheries using 'dbscan'
 ind = which(!dbscan::is.corepoint(tsne_out$Y, eps = 1, minPts = 20))
 pscore = rep(NA, dim(X)[1])
 pscore[ind] = perturbation_score_compute(X, tsne_out$Y, perplexity, length = 0.5, approx = 0, ind = ind)
 ```
 
-``` r
+```{r example5, fig.path="tools/"}
 ggplot() +
   geom_point(data = data.frame(tSNE1 = tsne_out$Y[, 1], tSNE2 = tsne_out$Y[, 2], score = pscore),
              aes(x = tSNE1, y = tSNE2, color = score)) +
   viridis::scale_color_viridis(direction = 1, name = "Perturbation\nScore") + 
   ggtitle('Embedding with perturbation score (prescreened)')
-```
-
-![](tools/example5-1.png)<!-- -->
-
-``` r
 
 ggplot() +
   geom_point(data = data.frame(x = X[, 1], y = X[, 2], score = pscore),
@@ -106,25 +99,17 @@ ggplot() +
   ggtitle('Original data with perturbation score (prescreened)')
 ```
 
-![](tools/example5-2.png)<!-- -->
 
 ### Singularity score
 
-First, we should examine the gradient of the t-SNE loss function to
-determine if a local minimum has been reached. Small gradient values
-indicate convergence to a local minimum.
-
-``` r
+First, we should examine the gradient of the t-SNE loss function to determine if a local minimum has been reached. Small gradient values indicate convergence to a local minimum.
+```{r example1, fig.path="tools/"}
 ### check whether local minimum is reached
 gradient_compute(tsne_out$Y, tsne_out$P)[1:10]
-#>  [1] -9.002258e-17 -1.692569e-17 -1.887777e-17 -8.305646e-17  1.549520e-17
-#>  [6]  1.774534e-18 -4.506946e-17  2.804973e-17  5.381179e-17 -5.280909e-17
 ```
 
-After reaching the local minimum, we can calculate the singularity score
-for fracture-inducing discontinuity diagnosis.
-
-``` r
+After reaching the local minimum, we can calculate the singularity score for fracture-inducing discontinuity diagnosis.
+```{r example2, fig.path="tools/"}
 ### calculate singularity score
 
 # compute the singularity score
@@ -136,11 +121,8 @@ ggplot() +
   viridis::scale_color_viridis(direction = 1, trans = 'log10', name = "Singularity\nScore")
 ```
 
-![](tools/example2-1.png)<!-- -->
-
 Singularity scores can also guide the selection of perplexity.
-
-``` r
+```{r example3, fig.path="tools/"}
 ### utilize singularity score to choose perplexity
 
 # calculate the singularity score for each perplexity candidate
@@ -161,20 +143,13 @@ ggplot(data = data.frame(
   geom_point(aes(x = perplexity, y = mean))
 ```
 
-![](tools/example3-1.png)<!-- -->
 
 # Details
-
-This R package offers functions to calculate singularity score and
-perturbation score, to diagnose fracture-inducing and
-overconfidence-inducing discontinuities.
+This R package offers functions to calculate singularity score and perturbation score, to diagnose fracture-inducing and overconfidence-inducing discontinuities.
 
 # References
+[1] https://github.com/jkrijthe/Rtsne
 
-\[1\] <https://github.com/jkrijthe/Rtsne>
+[2] https://github.com/jdonaldson/rtsne
 
-\[2\] <https://github.com/jdonaldson/rtsne>
-
-\[3\] L.J.P. van der Maaten and G.E. Hinton. “Visualizing
-High-Dimensional Data Using t-SNE.” Journal of Machine Learning Research
-9(Nov):2579-2605, 2008.
+[3] L.J.P. van der Maaten and G.E. Hinton. "Visualizing High-Dimensional Data Using t-SNE." Journal of Machine Learning Research 9(Nov):2579-2605, 2008.
